--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
@@ -22,7 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.3",
     "multer": "^1.4.2",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
